[package]
name = "climps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
geojson = "0.24.1"
prost = "0.12.6"
termion = "4.0.2"

[build-dependencies]
prost = "0.12.6"
prost-build = "0.12.6"

[package.metadata]
build = "build.rs"
